[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/vegetable_unit.gd" type="Script" id=1]
[ext_resource path="res://textures/unit_highlight_circle.png" type="Texture" id=2]
[ext_resource path="res://scripts/select_highlight.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.1, 0.2 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_grow = true
params_grow_amount = 0.01
albedo_color = Color( 0.988235, 0.980392, 0.0431373, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 1, 1 )

[node name="vegetable_unit" type="Spatial" groups=[
"unit",
]]
script = ExtResource( 1 )

[node name="mouse_detect_area" type="Area" parent="."]

[node name="collision_shape" type="CollisionShape" parent="mouse_detect_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="select_highlight" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 3 )
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 3 )
[connection signal="mouse_entered" from="mouse_detect_area" to="." method="_on_mouse_detect_area_mouse_entered"]
[connection signal="mouse_exited" from="mouse_detect_area" to="." method="_on_mouse_detect_area_mouse_exited"]
